css/style.css
body {
	font-family: Kode Mono, Roboto Condensed, Roboto;
	line-height: 1.25;
	font-size: 18px;
	color:#000000;
	text-align: center;
	background-color: #FFB6C1;
}	
form {
	color: black;
	background-color: #fff8e7;
	padding: 10px 15px;
	margin: 7px 2%;
	border: 2px;
	border-radius: 6px;
}
h1 {
	color: black;
	margin-bottom: 2%;
	text-align: center;
}
p {
	color: #000000;
	margin-bottom: 2%;
	text-align: center;
}
input {
	box-sizing: border-box;
	width: 97%;
	background-color: #fff8e7;
	display: block;
}
button {
	background-color: #FFB6C1;
	color: #000000;
}

